k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: LoadBalancer
  ports:
  - name: goserver-service
    port: 9001 #Porta do service
    targetPort: 8000 #Porta do Container (Pod)
    protocol: TCP
