k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  namespace: default
  annotations: #Serve para mandar informaçoes para bibliotecas externas
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernets.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "ingress.armycaffeine.com.br"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goserver-service
            port:
              number: 9001
  tls:
  - hosts:
    - "ingress.armycaffeine.com.br"
    secretName: letsencrypt-tls

# kubectl get certificates
